2013-07-02  Werner Lemberg  <wl@gnu.org>

	[ftbench] Improve `usage' text.

	* src/ftbench.c (default_hinting_engine,
	default_interpreter_version): New global variables.
	(usage): Improve text for `-H' and `-f'.
	(main): Updated.

2013-06-26  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Implement CFF and TTF engine change support.

	Key `H' toggles this.

	* src/ftgrid.c: Include FT_MODULE_H, FT_INTERNAL_OBJECTS_H,
	FT_INTERNAL_DRIVER_H, FT_CFF_DRIVER_H, and FT_TRUETYPE_DRIVER_H.
	(N_CFF_HINTING_ENGINES): Define macro.
	(GridStatusRec): Add `cff_hinting_engine' and
	`tt_interpreter_version'.
	(event_help): New layout similar to ftview.
	(event_cff_hinting_engine_change,
	event_tt_interpreter_version_change): New functions.
	(Process_Event): Extend handling of `H' key.
	(main): Get default properties of CFF and TTF drivers.

2013-06-26  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (event_help): Mention `q' and `ESC' keys.

2013-06-19  Werner Lemberg  <wl@gnu.org>

	* Version 2.5.0 released.
	=========================


	Tag sources with `VER-2-5-0'.

	* README: Updated.

2013-06-12  Werner Lemberg  <wl@gnu.org>

	[ftbench] Allow arbitrary sizes.

	* src/ftbench.c (main): Remove size limit.

2013-06-10  Werner Lemberg  <wl@gnu.org>

	[ftview] Use key `K' for toggling small cache.

	Key `C' is already in use.

	* src/ftview.c (Process_Event) <'C'>: Replace with...
	<'K'>: This key.
	Add missing `break'.
	(event_help): Updated.

2013-06-09  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Add command `f' to select number format.

	* src/ttdebug.c (use_float): New global variable.
	(RunIns): Add `f' key to toggle between floating and fixed point
	number formats.
	Update all affected print commands.

2013-06-09  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Add command `l', improve help and output.

	* src/ttdebug.c (RunIns): Display message if entering a new code
	range.
	Improve output of `?' and `p' keys.
	Add `l' key to show last bytecode instruction.
