@@ -1,3 +1,12 @@
+2013-07-05  Werner Lemberg  <wl@gnu.org>
+
+	[ftbench] Be more verbose in reporting results.
+
+	* src/ftbench.c (benchmark): Indent trace output.
+	(usage): Minor improvement.
+	(main): Add some option value guards.
+	Print information on test setup.
+
 2013-07-02  Werner Lemberg  <wl@gnu.org>
 
 	[ftbench] Improve `usage' text.
